--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -4,17 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#000000"
     android:layout_height="match_parent"
-    tools:context=".Welcome"
-    android:background="#EBE4D1"
-    android:orientation="vertical"
-    android:gravity="center">
-
-    <ImageView
-        android:src="@drawable/ic_android"
-        android:layout_gravity="center"
+    tools:context=".DisplayData">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:tint="#FFFFFF" />
+        android:layout_height="match_parent">
+    </androidx.recyclerview.widget.RecyclerView>
+
 
 </LinearLayout>
